tests/fixtures/invalid/float_bitxor_bytes.py
# Cannot bitwise XOR Float and Bytes
x: float = 1.0 ^ b"hello"
